k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-app
  template:
    metadata:
      labels:
        app: student-app
    spec:
      containers:
      - name: springboot-container
        image: raghavendra76/student-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
