k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app: student-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
